--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
   <body>
     <article class="container calculator">
       <div class="calculator__display">
-        <input type="text" class="calculator__display-input" value="2+7" />
+        <div class="calculator__display-input">2+7</div>
         <div class="calculator__display-result">9</div>
       </div>
       <div class="calculator__callback">
         <img src="assets/callback.png" alt="ìcone de seta" />
       </div>
+      <hr>
       <div class="calculator__buttons">
         <div class="calculator__buttons-wrapper">
           <button class="calculator__buttons--button calculator__buttons--button-background-red calculator__buttons--button-color-grey">C</button>
