--- a/index.html
+++ b/index.html
@@ -16,45 +16,118 @@
   <body>
     <article class="container calculator">
       <div class="calculator__display">
-        <div class="calculator__display-input">2+7</div>
-        <div class="calculator__display-result">9</div>
+        <input type="text" class="calculator__display-input" value="" />
+        <div class="calculator__display-result"></div>
       </div>
       <div class="calculator__callback">
         <img src="assets/callback.png" alt="ìcone de seta" />
       </div>
-      <hr>
+      <hr />
       <div class="calculator__buttons">
         <div class="calculator__buttons-wrapper">
-          <button class="calculator__buttons--button calculator__buttons--button-background-red calculator__buttons--button-color-grey">C</button>
-          <button class="calculator__buttons--button calculator__buttons--button-color-green">()</button>
-          <button class="calculator__buttons--button calculator__buttons--button-color-green">%</button>
-          <button class="calculator__buttons--button calculator__buttons--button-color-green">÷</button>
+          <button
+            class="calculator__buttons--button calculator__buttons--button-background-red calculator__buttons--button-color-grey"
+          >
+            C
+          </button>
+          <button
+            class="calculator__buttons--button calculator__buttons--button-color-green"
+          >
+            ()
+          </button>
+          <button
+            class="calculator__buttons--button calculator__buttons--button-color-green calculator--button--operator"
+          >
+            %
+          </button>
+          <button
+            class="calculator__buttons--button calculator__buttons--button-color-green calculator--button--operator"
+          >
+            ÷
+          </button>
         </div>
         <div class="calculator__buttons-wrapper">
-          <button class="calculator__buttons--button">7</button>
-          <button class="calculator__buttons--button">8</button>
-          <button class="calculator__buttons--button">9</button>
-          <button class="calculator__buttons--button calculator__buttons--button-color-green">X</button>
+          <button
+            class="calculator__buttons--button calculator__buttons--number"
+          >
+            7
+          </button>
+          <button
+            class="calculator__buttons--button calculator__buttons--number"
+          >
+            8
+          </button>
+          <button
+            class="calculator__buttons--button calculator__buttons--number"
+          >
+            9
+          </button>
+          <button
+            class="calculator__buttons--button calculator__buttons--button-color-green calculator--button--operator"
+          >
+            X
+          </button>
         </div>
         <div class="calculator__buttons-wrapper">
-          <button class="calculator__buttons--button">4</button>
-          <button class="calculator__buttons--button">5</button>
-          <button class="calculator__buttons--button">6</button>
-          <button class="calculator__buttons--button calculator__buttons--button-color-green">-</button>
+          <button
+            class="calculator__buttons--button calculator__buttons--number"
+          >
+            4
+          </button>
+          <button
+            class="calculator__buttons--button calculator__buttons--number"
+          >
+            5
+          </button>
+          <button
+            class="calculator__buttons--button calculator__buttons--number"
+          >
+            6
+          </button>
+          <button
+            class="calculator__buttons--button calculator__buttons--button-color-green calculator--button--operator"
+          >
+            -
+          </button>
         </div>
         <div class="calculator__buttons-wrapper">
-          <button class="calculator__buttons--button">1</button>
-          <button class="calculator__buttons--button">2</button>
-          <button class="calculator__buttons--button">3</button>
-          <button class="calculator__buttons--button calculator__buttons--button-color-green">+</button>
+          <button
+            class="calculator__buttons--button calculator__buttons--number"
+          >
+            1
+          </button>
+          <button
+            class="calculator__buttons--button calculator__buttons--number"
+          >
+            2
+          </button>
+          <button
+            class="calculator__buttons--button calculator__buttons--number"
+          >
+            3
+          </button>
+          <button
+            class="calculator__buttons--button calculator__buttons--button-color-green calculator--button--operator"
+          >
+            +
+          </button>
         </div>
         <div class="calculator__buttons-wrapper">
           <button class="calculator__buttons--button">+/-</button>
-          <button class="calculator__buttons--button">0</button>
+          <button
+            class="calculator__buttons--button calculator__buttons--number"
+          >
+            0
+          </button>
           <button class="calculator__buttons--button">.</button>
-          <button class="calculator__buttons--button calculator__buttons--button-background-green calculator__buttons--button-color-grey">=</button>
+          <button
+            class="calculator__buttons--button calculator__buttons--button-background-green calculator__buttons--button-color-grey calculator--button--result"
+          >
+            =
+          </button>
         </div>
       </div>
     </article>
+    <script src="./js/index.js"></script>
   </body>
 </html>
