--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="calculator__buttons">
         <div class="calculator__buttons-wrapper">
           <button
-            class="calculator__buttons--button calculator__buttons--button-background-red calculator__buttons--button-color-grey"
+            class="calculator__buttons--button calculator__buttons--button-background-red calculator__buttons--button-color-grey clean"
           >
             C
           </button>
